<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editfNameText"
        android:labelFor="@id/editfNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/firstName"
        android:hint="@string/first_name_msg"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editlNameText"
        android:labelFor="@id/editlNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editfNameText"
        android:layout_marginTop="27dp"
        android:layout_toRightOf="@+id/lastName"
        android:hint="@string/last_name_msg"
        android:ems="10" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editlNameText"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignTop="@+id/editlNameText"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editfNameText"
        android:layout_alignBottom="@+id/editfNameText"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:text="@string/first_name" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_below="@+id/editlNameText"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:onClick="onSubmit"
        android:text="@string/submit_text" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="readData"
        android:text="@string/read_text" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lastName"
        android:layout_centerVertical="true"
        android:onClick="redirectSavingFileExmpl"
        android:text="@string/saveFileExmpl" />

</RelativeLayout>